<resources>
    <string name="app_name">Qunay</string>
    <string name="title_activity_journey_tipo_one_thank_you">JourneyTipoOneThankYouActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_born">Nacimiento</string>
    <string name="label_password">Contraseña</string>
    <string name="label_confirm_password">Repetir contraseña</string>
    <string name="label_terms">Términos de uso y política</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_market_place_categoria">MarketPlaceCategoriaActivity</string>
    <string name="label_register_with">También puedes registrarte con</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="select_animal">Selecciona tu mascota</string>
    <string name="plus_add_pet">+ Agregar Mascota</string>
    <string name="my_pets">Mis Mascotas</string>
    <string name="accept">Aceptar</string>
    <string name="kind_of_vaccine">Tipo de vacuna</string>
    <string name="add_new_event">Agregar nombre del evento</string>
    <string name="add_event_name">Agregar nombre del evento</string>
    <string name="plus_add">+ agregar</string>
    <string name="repeat">Repetir</string>
    <string name="no_repeat">No repetir</string>
    <string name="alarm">Alarma</string>
    <string name="plus_add_alarm">+Agregar alarma</string>
    <string name="plus_add_photos">+Agregar fotos</string>
    <string name="description_event">Descripción del evento</string>
    <string name="dont_have_reminders">Aun no tienes\nrecordatorios</string>
    <string name="plus_add_new">+ Agregar Nuevo</string>
    <string name="select_vaccine">Selecciona tipo de vacuna</string>
    <string name="underline_accept"><u>  Aceptar  </u></string>
    <string name="notes">Notas</string>
    <string name="pictures">Fotos</string>
    <string name="add">agregar</string>
    <string name="update_alarms">Actualizando alarmas</string>
    <string name="general_information">Información General</string>
    <string name="label_age">Edad:</string>
    <string name="label_weight">Peso:</string>
    <string name="label_esteralized">Esterilizado:</string>
    <string name="label_trained">Entrenado:</string>
    <string name="login">Ingresar</string>
    <string name="label_friendly_with_others_dogs">Amigable con otros perros:</string>
    <string name="label_friendly_with_kids">Amigable con niños:</string>
    <string name="care_information">Información de cuidado</string>
    <string name="label_bathroom_outlets">Salidas al baño:</string>
    <string name="label_energy_level">Nivel de energia:</string>
    <string name="label_lunch_hours">Horarios de comida:</string>
    <string name="label_additional_info">Informacion Adicional:</string>
    <string name="health_information">Información de salud</string>
    <string name="label_has_illness">Tiene alguna enfermedad:</string>
    <string name="label_additional_details">Detalles adicionales:</string>
    <string name="pictures_gallery">Galería de fotos</string>
    <string name="title_activity_animation_loading">AnimationLoading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="search_icon">Search Icon</string>
    <string name="buscar">Buscar</string>
    <plurals name="days_quantity">
        <item quantity="one">%d día</item>
        <item quantity="other">%d días</item>
    </plurals>
    <plurals name="weeks_quantity">
        <item quantity="one">%d semana</item>
        <item quantity="other">%d semanas</item>
    </plurals>
    <plurals name="months_quantity">
        <item quantity="one">%d mes</item>
        <item quantity="other">%d meses</item>
    </plurals>
    <plurals name="years_quantity">
        <item quantity="one">%d año</item>
        <item quantity="other">%d años</item>
    </plurals>
    <string name="title_activity_review_activity.kt">ReviewActivity.kt</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_comentario_detalle">ComentarioDetalleActivity</string>
    <string name="title_activity_edit_pet_detail">EditPetDetailActivity</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="cancelar">Cancelar</string>
</resources>