<?xml version="1.0" encoding="utf-8"?>
<layout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		tools:ignore="MissingDefaultResource">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/clHeaderField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/tvTitleField"
				style="@style/WorkSans_Regular_SemiBold16"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/kind_of_vaccine"
				android:textColor="@color/grisTitulo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tvActionField"
				style="@style/WorkSans_Regular14"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingVertical="10dp"
				android:text="@string/plus_add"
				android:textColor="@color/grisTitulo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/edtService"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:hint="@string/select_vaccine">

			<AutoCompleteTextView
				android:id="@+id/autoService"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none" />

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>
</layout>
