<?xml version="1.0" encoding="utf-8"?>
<layout>

	<data>

		<variable
			name="reminderViewModel"
			type="com.pe.mascotapp.viewmodels.ReminderViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".vistas.ReminderActivity">

		<include
			android:id="@+id/toolbar"
			layout="@layout/toolbar_activity"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:background="@color/backgroundBanner"
			android:fillViewport="true"
			app:layout_constraintBottom_toTopOf="@+id/llButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/toolbar">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/backgroundBanner"
					android:orientation="vertical"
					android:paddingBottom="16dp">
                   <androidx.constraintlayout.widget.ConstraintLayout
					   android:layout_width="wrap_content"
					   android:layout_height="wrap_content"
					   android:layout_gravity="center"
					   android:layout_marginTop="26dp">
					<TextView
						android:id="@+id/tvTittle"
						style="@style/WorkSans_Regular_Bold16"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/select_animal"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>
					   <TextView
						   android:layout_marginStart="4dp"
						   android:id="@+id/txtCounter"
						   style="@style/WorkSans_Regular_Bold16"
						   android:layout_width="wrap_content"
						   android:layout_height="wrap_content"
						   android:text="(0)"
						   app:layout_constraintStart_toEndOf="@+id/tvTittle"
						   app:layout_constraintTop_toTopOf="parent"
						   android:textColor="@color/primaryColor"
						   app:layout_constraintBottom_toBottomOf="parent"/>
				   </androidx.constraintlayout.widget.ConstraintLayout>
					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/rvAnimals"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="18dp"
						android:orientation="horizontal"
						tools:itemCount="1"
						tools:listitem="@layout/item_pet" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/white"
					android:orientation="vertical">

					<TextView
						style="@style/WorkSans_Regular15"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_marginTop="18dp"
						android:text="Selecciona tu categoría"
						android:textColor="@color/plomoq" />

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/rvCategories"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginHorizontal="40dp"
						android:layout_marginTop="26dp"
						app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
						app:spanCount="5"
						tools:itemCount="10"
						tools:listitem="@layout/item_category_reminder" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="vertical"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">


					<TextView
						style="@style/WorkSans_Regular_SemiBold16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/add_event_name"
						android:textColor="@color/grisTitulo" />


					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/nameReminder"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:textSize="14sp" />

				</LinearLayout>

				<LinearLayout
					android:id="@+id/llAllDay"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="horizontal"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">

					<TextView
						android:id="@+id/tvDateStart"
						style="@style/WorkSans_Regular16"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="Fecha de Inicio"
						android:textColor="@color/blue_primary" />

					<TextView
						android:id="@+id/tvHourStart"
						style="@style/WorkSans_Regular16"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="agregar hora"
						android:textAlignment="textEnd"
						android:textColor="@color/primaryColor"
						android:textStyle="bold" />


				</LinearLayout>


				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rvVaccineFields"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableVaccines &amp;&amp; reminderViewModel.enableForm}"
					tools:listitem="@layout/item_field_vaccine" />

				<LinearLayout
					android:id="@+id/llRepeat"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="vertical"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">

					<TextView
						style="@style/WorkSans_Regular_SemiBold16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/repeat"
						android:textColor="@color/grisTitulo" />


					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="22dp"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/tvRepeat"
							style="@style/WorkSans_Regular16"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/no_repeat"
							android:textColor="@color/blue_primary" />

						<TextView
							android:id="@+id/tvAddDuration"
							style="@style/WorkSans_Regular16"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="+ Anadir Duracion"
							android:textAlignment="textEnd"
							android:textColor="@color/plomoq"
							android:textStyle="bold" />

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/llAlarm"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="vertical"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">

					<TextView
						style="@style/WorkSans_Regular_SemiBold16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/alarm"
						android:textColor="@color/grisTitulo" />

					<TextView
						android:id="@+id/tvAlarm"
						style="@style/WorkSans_Regular16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/plus_add_alarm"
						android:textColor="@color/blue_primary" />

				</LinearLayout>

				<LinearLayout
					android:id="@+id/llAddImage"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="vertical"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">

					<TextView
						style="@style/WorkSans_Regular_SemiBold16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/plus_add_photos"
						android:textColor="@color/grisTitulo" />

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/rvImages"
						android:layout_marginTop="8dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
					android:background="@color/white"
					android:orientation="vertical"
					android:paddingHorizontal="48dp"
					android:paddingVertical="25dp"
					android:visibility="@{reminderViewModel.enableForm}">

					<TextView
						style="@style/WorkSans_Regular_SemiBold16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/description_event"
						android:textColor="@color/grisTitulo" />

					<EditText
						android:id="@+id/edtDescription"
						style="@style/WorkSans_Regular16"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/bg_card_radius"
						android:gravity="start|top"
						android:hint=""
						android:inputType="textMultiLine"
						android:lines="8"
						android:maxLines="8"
						android:padding="8dp"
						android:scrollbars="vertical" />
				</LinearLayout>

			</LinearLayout>

		</androidx.core.widget.NestedScrollView>

		<LinearLayout
			android:id="@+id/llButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent">


			<com.google.android.material.button.MaterialButton
				android:id="@+id/buttonAccept"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:background="@color/red"
				android:text="@string/accept"
				android:enabled="@{reminderViewModel.enableButton}"
				android:textColor="@color/white"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>