<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="reminderViewModel"
			type="com.pe.mascotapp.viewmodels.ReminderHistoryViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/tvTitleHistory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="30dp"
			android:fontFamily="@font/caprasimo_regular"
			android:text="Historial"
			android:textColor="@color/primaryColor"
			android:textSize="24dp"
			android:textStyle="bold"
			android:visibility="@{!reminderViewModel.remindersIsEmpty}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvAnimalsReminder"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvTitleHistory"
			tools:itemCount="1"
			tools:listitem="@layout/tab_animal" />

		<Button
			android:id="@+id/btnAddNew"
			style="@style/Widget.Button.Primary"
			android:layout_width="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="32dp"
			android:text="@string/plus_add_new"
			android:visibility="@{!reminderViewModel.remindersIsEmpty}"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/rvAnimalsReminder" />


		<androidx.core.widget.NestedScrollView
			android:id="@+id/nsvReminders"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="10dp"
			android:fillViewport="true"
			android:paddingHorizontal="32dp"
			android:visibility="@{!reminderViewModel.remindersIsEmpty}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/btnAddNew">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvReminders"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:listitem="@layout/item_reminder" />

		</androidx.core.widget.NestedScrollView>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="vertical"
			android:visibility="@{reminderViewModel.remindersIsEmpty}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/rvAnimalsReminder">

			<TextView
				android:id="@+id/tvDontHaveReminder"
				style="@style/WorkSans_Regular15"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:text="@string/dont_have_reminders"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:contentDescription="@string/app_name"
				android:scaleType="centerCrop"
				android:src="@drawable/background_pets_griss"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvDontHaveReminder" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btnAgregar"
				style="@style/Widget.Button.Primary"
				android:layout_width="wrap_content"
				android:layout_height="60dp"
				android:layout_marginBottom="16dp"
				android:text="@string/plus_add_new"
				android:textColor="@color/white"
				android:textSize="20sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
