<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reminder"
            type="com.pe.mascotapp.vistas.adapters.ReminderEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtInitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{reminder.startHour}"
            tools:text="11:30" />

        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInitDate"
            android:text="@{reminder.endDate}"
            tools:text="13:50" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtInitDate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_primary"
                android:paddingVertical="12dp">

                <!-- Movie Image -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/petImage"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    tools:src="@drawable/perro1" />

                <TextView
                    android:id="@+id/txtReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/petImage"
                    android:text="@{reminder.title}"
                    tools:text="Vacuna anti rabia" />

                <TextView
                    android:id="@+id/txtPetName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtReminder"
                    tools:text="Harry cane" />

                <ImageView
                    android:id="@+id/icDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtDate"
                    app:tint="@color/white"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/icDate"
                    app:layout_constraintTop_toBottomOf="@+id/txtPetName"
                    android:text="@{reminder.startHour+ ' '+'-'+' ' +reminder.startDate}"
                    tools:text="11:35 am - 15/18/21" />

                <ImageView
                    android:id="@+id/icLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/txtLocationAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtLocationName"
                    app:tint="@color/white"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/txtLocationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/icLocation"
                    app:layout_constraintTop_toBottomOf="@+id/txtDate"
                    android:text="@{reminder.location}"
                    tools:text="Clinica Delgado" />

                <TextView
                    android:id="@+id/txtLocationAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/grey100"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/icLocation"
                    app:layout_constraintTop_toBottomOf="@+id/txtLocationName"
                    android:text="@{reminder.location}"
                    tools:text="Calle reynoso 157 - San Borja" />

                <TextView
                    android:id="@+id/txtNotesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/notes"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtLocationAddress" />

                <TextView
                    android:id="@+id/txtNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/grey100"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/txtNotesTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtNotesTitle"
                    android:text="@{reminder.description}"
                    tools:text="llevar  el historial  medico y  recardar preguntar \n soobre descarte" />

                <TextView
                    android:id="@+id/txtPicturesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pictures"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNotes" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtPicturesTitle"
                    tools:itemCount="1" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/grpSecondQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="rvPics,txtPicturesTitle,txtNotes,txtNotesTitle,petImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>